# analyses_numeriques

./: CMakeLists.txt  LICENSE  README.md  control_fonction.c  control_fonction.h  determinantplus.c  determinantplus.h  equation_differentielle.c  equation_differentielle.h  equation_lineaire.c  equation_lineaire.h  interpolation_lineaire.c  interpolation_lineaire.h  main.c  resolution_equation.cbp  resolution_equation.depend  resolution_equation.layout  save_me.c  save_me.h
